<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonActivity"
    android:background="@drawable/back">


    <Button
        android:id="@+id/happy"
        android:layout_width="111dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/purple"
        android:text="@string/happy"
        android:textColor="#FFF"
        android:onClick="happyQ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sad"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <TextView
        android:id="@+id/moodOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:background="@drawable/pink"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/rate_you_day"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/sad"
        android:layout_width="119dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/purple"
        android:text="@string/sad"
        android:textColor="#FFF"
        android:onClick="sadQ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <Button
        android:id="@+id/sensitive"
        android:layout_width="109dp"
        android:layout_height="71dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/purple"
        android:text="@string/sensitive"
        android:textColor="#FFF"
        android:onClick="sensQ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <Button
        android:id="@+id/tenHours"
        android:layout_width="119dp"
        android:layout_height="72dp"
        android:background="@drawable/lavender"
        android:text="@string/_10_hours"
        android:textColor="#FFF"
        android:onClick="ten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/sevenHours"
        android:layout_width="105dp"
        android:layout_height="72dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:background="@drawable/lavender"
        android:text="@string/_7_hours"
        android:textColor="#FFF"
        android:onClick="seven"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <Button
        android:id="@+id/fivehours"
        android:layout_width="112dp"
        android:layout_height="72dp"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="280dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/lavender"
        android:text="@string/_5_hours"
        android:textColor="#FFF"
        android:onClick="five"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737" />

    <TextView
        android:id="@+id/mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="333dp"
        android:layout_marginRight="333dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/peach"
        android:text="@string/mood"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginEnd="229dp"
        android:layout_marginRight="229dp"
        android:background="@drawable/peach"
        android:text="@string/amount_of_sleep"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

</androidx.constraintlayout.widget.ConstraintLayout>